# zenrav1e

./: .gitignore  .workongoing  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.crates.md  README.md  build.rs  clippy.toml  justfile
apidoc/: Cargo.toml
apidoc/tests/: public_api_doc.rs
benches/: bench.rs  dist.rs  mc.rs  plane.rs  predict.rs  rdo.rs  transform.rs
benchmarks/: README.md  issue6-bottomup-qm-2026-06-13.md  issue6-fix_v1-postNONE-restore.tsv  issue6-photo-clean-2026-06-13.tsv  issue6-probe-earlyexit-disable.tsv  issue6-probe-norect-photo.tsv  issue6-probe-norect-scifig.tsv  issue6-scifig-clean-2026-06-13.tsv  stage2_allpaths_2026-06-18.tsv  stage2_closedform_2026-06-18.tsv  stage2_rdo_estimate_2026-06-18.md  stage2_realrate_2026-06-18.tsv  stage2_tableest_2026-06-18.tsv  stage2_txtype_fixed_2026-06-18.tsv  trellis_rdoq_2026-06-18.md  trellis_rdoq_nonphoto_floor0_2026-06-18.tsv  trellis_rdoq_nonphoto_floor1_2026-06-18.tsv  trellis_rdoq_photos38_s0.5_2026-06-18.tsv  trellis_rdoq_photos38_s0.75_2026-06-18.tsv  trellis_rdoq_photos38_s1.0_2026-06-18.tsv  trellis_rdoq_photos_2026-06-18.tsv
docs/: trellis-rdoq-roadmap.md
examples/: simple_encoding.rs
fuzz/: Cargo.toml  rav1e.dict
ivf/: Cargo.toml
src/: capi.rs  cdef.rs  deblock.rs  dist.rs  ec.rs  encoder.rs  fuzzing.rs  header.rs  lib.rs  lrf.rs  mc.rs  me.rs  partition.rs  predict.rs  rate.rs  rdo.rs  recon_intra.rs  scenechange_stub.rs  segmentation.rs  stats.rs  test_8bit_u16.rs
tests/: binary.rs  doctests.rs  fuzz_regression.rs  public_api_doc.rs  trellis_roundtrip.rs
(+68 files in other folders)
